2009-11-02  Jari Aalto  <jari.aalto@cante.net>

	* copyright-update.pl (wanted): Ignore .hg and
	.mtn version control directories.

2008-09-20  Jari Aalto  <jari.aalto@cante.net>

	* ripdoc.pl
	(top level): Remove old FSF address.
	(HELP): Add proper short and --long options. Improve
	documentation. Moved /* */ java example to the BUGS section.
	(Main): Delete EOL whitespaces.

2008-09-14  Jari Aalto  <jari.aalto@cante.net>

	* copyright-update.pl (HELP): Document new option --line RE.
	(HandleFile): Chnage only --line RE lines.

2008-01-25  Jari Aalto  <jari.aalto@cante.net>

	* copyright-update.pl (HandleCommandLineArgs): Accept
	--debug LEVEL, instead of just -d.
	(Main): Display warning if there are no matching files.
	(wanted): Add git, darcs, arch version control directories
	to default ignore list.

2008-08-22  Jari Aalto  <jari.aalto@cante.net>

	* copyright-update.pl (Help): Work around 5.10 bug for pod2text.

2007-05-01  Jari Aalto  <jari.aalto@cante.net>

	* copyright-update.pl (HandleFile): Variable $msg
	had wrong number of double quotes.
	(HandleFile): Missing semicolon from statement inside
	'$y eq $YEAR'.
	(wanted): $ignore pattern improved to cinlude ".#thisfile".

2006-02-19  Jari Aalto  <jari.aalto@cante.net>

	* copyright-update.pl:
	(HandleCommandLineArgs): New --ignore option and variable
	$OPT_REGEXP_IGNORE
	(wanted): Check user's

2005-08-17  Jari Aalto  <jari.aalto@cante.net>

	* emacs-util.pl (UniqueRoots2): Removed. Not used.
	(Help): Added option --scan-type
	(HandleCommandLineArgs): Added $OPT_SCAN_TYPE
	(wanted): Check  $OPT_SCAN_TYPE and ignore all
	symlinks.

2005-05-19  Jari Aalto  <jari.aalto@cante.net>

	* Makefile:  Removed version
	control Id-tag.

	* makefile.pl: Removed version
	control Id-tag. Corrected #!-line.

	* find-version.pl: Removed version
	control Id-tag. Corrected #!-line.

	* emacs-util.pl: Removed version
	control Id-tag. Corrected #!-line.
	(HELP::AUTHOR): Removed CVS conflict markers.